tests/lang/compile_fail/cptr_borrow_binding.kojs
bytes = "abc".to_binary()
p = CPtr.borrow(bytes)
